// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kpi-filters Renders \`kpi-filters\` with default props 1`] = `
<div
  class="layout column"
>
  <span
    class="pl-4 subheading grey--text text--darken-2"
  >
    kpiFilters.helpInformation
  </span>
  <kpi-filters-list-stub
    filters=""
    pagination="[object Object]"
    totalitems="0"
  />
</div>
`;

exports[`kpi-filters Renders \`kpi-filters\` with full permissions 1`] = `
<div
  class="layout column"
>
  <span
    class="pl-4 subheading grey--text text--darken-2"
  >
    kpiFilters.helpInformation
  </span>
  <kpi-filters-list-stub
    duplicable="true"
    filters=""
    pagination="[object Object]"
    removable="true"
    totalitems="10"
    updatable="true"
  />
</div>
`;
